fix: collapse 样式修复调整

--- a/packages/ui/collapse/src/index.less
+++ b/packages/ui/collapse/src/index.less
@@ -1,19 +1,15 @@
 @osui-collapse-class-prefix: osui-collapse;
 
 .@{osui-collapse-class-prefix} {
-    .ant-collapse > .ant-collapse-item > .ant-collapse-header .ant-collapse-arrow {
-        font-size: 0;
-    }
-
     .ant-collapse-item {
         .ant-collapse-header {
             color: var(--theme-text-color);
-            font-weight: 600;
+            font-weight: var(--collapse-header-font-weight);
             font-size: 14px;
             padding-top: 0;
             padding-bottom: 0;
-            height: 32px;
-            line-height: 32px;
+            height: var(--collapse-header-height);
+            line-height: var(--collapse-header-height);
 
             .icon-wrapper {
                 background: var(--collapse-expand-icon-bg);
@@ -33,8 +29,38 @@
     }
 
     .ant-collapse-item > .ant-collapse-content > .ant-collapse-content-box {
-        padding-left: 40px;
-        padding-top: 13px;
-        padding-bottom: 8px;
+        .content-padding(42px);
     }
 }
+
+.content-padding(@padding-left) {
+    padding-left: @padding-left;
+    padding-top: var(--collapse-content-box-padding-top);
+    padding-bottom: var(--collapse-content-box-padding-bottom);
+}
+
+// 对层级的控制
+.nest(@level, @content-padding, @icon-padding) {
+    .@{osui-collapse-class-prefix}-level-@{level} {
+        &.ant-collapse-item > .ant-collapse-content > .ant-collapse-content-box {
+            padding: 0 !important;
+        }
+
+        .@{osui-collapse-class-prefix}-level-child {
+            .ant-collapse-item > .ant-collapse-content > .ant-collapse-content-box {
+                .content-padding(@content-padding);
+            }
+
+            .ant-collapse-header {
+                padding-left: @content-padding !important;
+
+                .icon-wrapper.ant-collapse-arrow {
+                    left: @icon-padding;
+                }
+            }
+        }
+    }
+}
+
+.nest(1, 64px, 42px);
+.nest(2, 86px, 64px);
